adding notes and cleanup

--- a/00_about_exam.ipynb
+++ b/00_about_exam.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "949b4839",
    "metadata": {},
    "source": [
     "# Tableau Certified Data Analyst \n",
-    "[Exam Guide](https://mkt.tableau.com/files/TableauCertifiedDataAnalyst_ExamGuide.pdf) Notes"
+    "[Exam Guide](https://mkt.tableau.com/files/TableauCertifiedDataAnalyst_ExamGuide.pdf)"
    ]
   },
   {
@@ -29,6 +30,7 @@
    "source": [
     "## Dimensions and Measures\n",
     ">Nouns\n",
+    "\n",
     "### Dimensions\n",
     "Qualitative values *can only find the frequencies and mode*\n",
     "- Date\n",
@@ -49,6 +51,7 @@
    "source": [
     "## Discrete and Continuous\n",
     ">Adjectives\n",
+    "\n",
     "### Discrete `blue pill`\n",
     "Finite range\n",
     "- Numeric dimensions with a datatype of `string` of `boolean`\n",
