through Gantt Charts

--- a/03_viz-practice.ipynb
+++ b/03_viz-practice.ipynb
@@ -18,7 +18,7 @@
     ":-- | :--\n",
     "A | [Build a Box Plot](https://help.tableau.com/current/pro/desktop/en-us/buildexamples_boxplot.htm)\n",
     "B | [Build a Bullet Graph](https://help.tableau.com/current/pro/desktop/en-us/qs_bullet_graphs.htm)\n",
-    "C | Build with Density Marks (Heatmap)\n",
+    "C | [Build with Density Marks (Heatmap)](https://help.tableau.com/current/pro/desktop/en-us/buildexamples_density.htm)\n",
     "D | Build a Gantt Chart\n",
     "E | Build a Highlight Table\n",
     "F | Build a Histogram\n",
@@ -82,7 +82,7 @@
    "metadata": {},
    "source": [
     "#### Use cases:\n",
-    "- highlighting performance against a benchmark\n",
+    "- highlighting performance against a benchmark(s)\n",
     "![bullet_graph_ex1.jpeg](attachment:bullet_graph_ex1.jpeg)\n",
     ">*image via [Visual BI](https://visualbi.com/blogs/business-intelligence/dashboards/bullet-charts-use-cases/)*"
    ]
@@ -124,20 +124,25 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a7385d42",
+   "id": "5e99a36c",
    "metadata": {},
    "source": [
     "### C. [Density Heat Map](https://help.tableau.com/current/pro/desktop/en-us/buildexamples_density.htm)\n",
     "Used to glean insights from dense data with many overlapping points, Density Heat Maps group data by points of overlap and then color code the point groups based on the numbers of points in each group. This helps a user to identify locations with greater numbers of points. \n",
+    "\n",
+    "#### Uses:\n",
+    "- Data is too visually dense to draw any conclusion\n",
+    "- Quickly see where the most data is on a graph\n",
+    "\n",
     "<hr>\n",
     "\n",
     "![density-heat-map.png](attachment:density-heat-map.png)\n",
-    ">*image source: [Chartio](https://chartio.com/learn/charts/heatmap-complete-guide/)"
+    ">*image via [Chartio](https://chartio.com/learn/charts/heatmap-complete-guide/)*"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aa4fa807",
+   "id": "2f9082d8",
    "metadata": {},
    "source": [
     "#### Specs\n",
@@ -151,9 +156,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12a6a686",
+   "metadata": {},
+   "source": [
+    "### D. Gant Chart\n",
+    "#### Uses:\n",
+    "- Show durations of time/events/activities\n",
+    "- Planning and scheduling\n",
+    "- Project management\n",
+    "- Time tracking and reporting\n",
+    "- Workflow management\n",
+    "\n",
+    "#### Specs\n",
+    "Tableau Field | Selection | Use\n",
+    ":-- | :-- | :--\n",
+    "Mark type | Automatic or Gantt Bar\n",
+    "Columns shelf | Date or Time field (continuous measure)\n",
+    "Rows shelf | Dimension(s)\n",
+    "Size | Continuous measure"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01e9deca",
+   "id": "c93afb03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b48f7629",
    "metadata": {},
    "outputs": [],
    "source": []
