elearning notes through data types

--- a/eLearning/00_getting-started.ipynb
+++ b/eLearning/00_getting-started.ipynb
@@ -23,23 +23,43 @@
     "    - Amazon Web Services (AWS)\n",
     "    - Microsoft Azure\n",
     "\n",
-    "Assigning Data\n",
-    "- Role \n",
+    "## Assigning Data\n",
+    "- Role: *What it is...* \n",
     "    - `Dimension` *qualitative fields*\n",
     "        - Describes or categorizes data\n",
-    "        - Slices quantitative data\n",
+    "        - Set the **granularity** or level of detail in a view\n",
     "    - `Measure` *quantitative fields*\n",
-    "- Type (data type)\n",
-    "    - Provides a measurement for qualitative data\n",
-    "    - Can be aggregated\n",
+    "- Type *What it does...*\n",
+    "    - `Discrete` \n",
+    "        - The data contains separate parts\n",
+    "        - Come out onto the view as themselves\n",
+    "    - `Continuous`\n",
+    "        - Can take on any value in a range\n",
+    "        - Aggregated when placed in a view\n",
     "\n",
     "Any changes made to data in Tableau do not affect the original data source. The changes are stored as metadata in a Tableau file called Tableau Data Source or `.tds`"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a40b465",
+   "metadata": {},
+   "source": [
+    "## High Granularity vs Aggregated Data\n",
+    "Data granularity refers to the level of detail for a peice of data. \n",
+    ">Test scores\n",
+    "- High School (**highest aggregation**)\n",
+    "- Grade\n",
+    "- Class\n",
+    "- Student (**highest granularity**)\n",
+    "\n",
+    "Tableau's `Data Hierarchy` feature is useful for creating drill downs in charts."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f02c79b2",
+   "id": "125c73eb",
    "metadata": {},
    "outputs": [],
    "source": []
