--- a/eLearning/01_explore-and-analyze-data.ipynb
+++ b/eLearning/01_explore-and-analyze-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9177633f",
+   "id": "5d8ed1a9",
    "metadata": {},
    "source": [
     "# Explore and Analyze Data\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f27f7bf9",
+   "id": "ee91f77a",
    "metadata": {},
    "source": [
     "# 1. Creating Calculated Fields\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4fdba59",
+   "id": "ba9b62c1",
    "metadata": {},
    "source": [
     "#### Parts of a Calculated Field\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5164943b",
+   "id": "4077cb7f",
    "metadata": {},
    "source": [
     "\n"
@@ -60,7 +60,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "22a13a68",
+   "id": "b7d27bb7",
    "metadata": {},
    "source": [
     "### ii. Create Calculated Fields\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c735eca5",
+   "id": "6c4f31c7",
    "metadata": {},
    "source": [
     ">The calculation editor will check syntax but the calculation should still be tested in a visualization to confirm it behaves as you intended."
@@ -82,7 +82,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d4e51f8d",
+   "id": "8d4314b1",
    "metadata": {},
    "source": [
     "#### Function Reference Pane\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde93dfe",
+   "id": "bce35a20",
    "metadata": {},
    "source": [
     "#### Ad Hoc Calculations\n",
@@ -123,7 +123,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "4bb402c5",
+   "id": "bd8ffff0",
    "metadata": {},
    "source": [
     "### iii. Use and Edit Calculated Fields\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572d5d86",
+   "id": "9728b601",
    "metadata": {},
    "source": [
     "## B. Working with String and Type Conversion Functions\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47221698",
+   "id": "0bdc67a1",
    "metadata": {},
    "source": [
     "### i. Use String Functions\n",
@@ -163,15 +163,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4eda2735",
+   "execution_count": 1,
+   "id": "a71da752",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hex_ref' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-c261a6474818>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhex_ref\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mState\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'hex_ref' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "hex_ref.State"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "f1cc3b21",
+   "id": "3c50f390",
    "metadata": {},
    "source": [
     "### ii. Concatenate String Fields"
@@ -180,14 +194,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36677c60",
+   "id": "88b92117",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8e096946",
+   "id": "d4886e7d",
    "metadata": {},
    "source": [
     "### iii. Use Type Conversion Functions"
@@ -196,14 +210,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "061aa239",
+   "id": "b8f36773",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8a36004d",
+   "id": "cdafebd2",
    "metadata": {},
    "source": [
     "### v. Try Creating a Calculated String and Type Conversion"
@@ -212,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cc5718a",
+   "id": "c6b49c77",
    "metadata": {},
    "outputs": [],
    "source": []
