--- a/eLearning/01_explore-and-analyze-data.ipynb
+++ b/eLearning/01_explore-and-analyze-data.ipynb
@@ -163,25 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a71da752",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'hex_ref' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-c261a6474818>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhex_ref\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mState\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'hex_ref' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "hex_ref.State"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -192,12 +178,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88b92117",
+   "cell_type": "markdown",
+   "id": "329c2657",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Fixed string fields"
+   ]
   },
   {
    "cell_type": "markdown",
