adding through aggregates

--- a/eLearning/01_explore-and-analyze-data.ipynb
+++ b/eLearning/01_explore-and-analyze-data.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a11f8fc",
+   "id": "629db75b",
    "metadata": {},
    "source": [
     "## C. Working with Date Functions"
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e64ef3d",
+   "id": "bc96a913",
    "metadata": {},
    "source": [
     "### i. Understand Date Functions\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd45d329",
+   "id": "d338edef",
    "metadata": {},
    "source": [
     "## D. Working with Aggregate Functions"
@@ -245,16 +245,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb35e226",
+   "id": "156c5fb3",
    "metadata": {},
    "source": [
     "`AGG` indicates aggregation has already been defined in the calculation and no further aggregation can be performed."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6752c2e1",
+   "metadata": {},
+   "source": [
+    "## E. Aggregating Dimensions and Advanced Calculations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22be3a9f",
+   "id": "95bc896f",
    "metadata": {},
    "outputs": [],
    "source": []
