aggregate calculations notes

--- a/eLearning/01_explore-and-analyze-data.ipynb
+++ b/eLearning/01_explore-and-analyze-data.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "629db75b",
+   "id": "f7679179",
    "metadata": {},
    "source": [
     "## C. Working with Date Functions"
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc96a913",
+   "id": "67cfccd8",
    "metadata": {},
    "source": [
     "### i. Understand Date Functions\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d338edef",
+   "id": "d1ab530b",
    "metadata": {},
    "source": [
     "## D. Working with Aggregate Functions"
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "156c5fb3",
+   "id": "ae945413",
    "metadata": {},
    "source": [
     "`AGG` indicates aggregation has already been defined in the calculation and no further aggregation can be performed."
@@ -253,19 +253,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6752c2e1",
+   "id": "3751d8cc",
    "metadata": {},
    "source": [
-    "## E. Aggregating Dimensions and Advanced Calculations"
+    "## E. Aggregating Dimensions and Advanced Calculations\n",
+    "- `MIN`, \n",
+    "- `MAX`, \n",
+    "- `COUNT`, \n",
+    "- `COUNTD`, and \n",
+    "- `ATTR` tests whether the `min` and `max` values in a field are equal\n",
+    "\n",
+    "aggregation types"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95bc896f",
+   "id": "4bb367f1",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "287be3a5",
+   "metadata": {},
+   "source": [
+    "#### Creating Level of Detail calculations that display data independent of the dimensions in the view\n",
+    "**Level of Detail Expressions** enable you to fix a dimension to a calculation that remains constant regardless of the field-level aggregations in the view. This calculation can be based on dimensions not in the visualization. "
+   ]
   }
  ],
  "metadata": {
